# rust-graphql-microservice-template

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20210927133222_init.up.sql  20210927172255_example.up.sql
src/: main.rs
src/gpql/: context.rs  handler.rs  mod.rs  model.rs  root.rs
