[package]
name = "rust-actix-graphql-sqlx-microservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.3"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
juniper = "0.15.12"
serde = "1.0.210"
serde_json = "1.0.129"
sqlx = {version = "0.7.4", features=["postgres", "runtime-async-std-rustls", "chrono"]}